# segmecam

./: .dockerignore  .gitignore  AGENT.md  AGENTS.md  BUILD  BUILD.bazel  Dockerfile  Dockerfile.dev  Dockerfile.prod  FLATHUB_SUBMISSION.md  FLATPAK_BUILDING.md  FLATPAK_TROUBLESHOOTING.md  GPU_DETECTION_IMPLEMENTATION.md  GPU_SUPPORT_MATRIX.md  MODULE.bazel  PHASE_8_COMPLETE.md  README.md  REFACTORING_STATUS.md  SegmeCam-Clean.desktop  SegmeCam-Direct.desktop  SegmeCam-Face-Direct.desktop  SegmeCam-Face.desktop  SegmeCam-Flathub-TODO.md  SegmeCam.desktop  TODO.md  WORKSPACE  build-flatpak-bundle.sh  build-flatpak-simple.sh  build-flatpak-working.sh  build-flatpak.sh  copy-mediapipe-models.sh  create-flatpak-bundle.sh  docker-compose.prod.yml  docker-compose.yml  imgui.ini  install-desktop-shortcuts.sh  org.segmecam.SegmeCam.appdata.xml  org.segmecam.SegmeCam.desktop  org.segmecam.SegmeCam.final.yml  org.segmecam.SegmeCam.minimal.yml  (+9 more)
.github/: copilot-instructions.md
.github/prompts/: refactoring.prompt.md
.github/workflows/: flatpak-release.yml
flatpak-bundle/lib/: libEGL_mesa.so.0.0.0  libGLESv2.so.2  libGLX_mesa.so.0  libblas.so.3  libdrm.so.2  libpoppler.so.134  libssh-gcrypt.so.4  libwayland-client.so.0  libwayland-cursor.so.0  libwayland-egl.so.1  libxml2.so.2
include/: camera_enum.h
mediapipe/examples/desktop/segmecam/: BUILD  app_loop.cpp  app_loop.h  app_state.cpp  app_state.h  args_parser.h  camera_manager.h  gpu_detector.cpp  gpu_detector.h  mediapipe_manager.cpp  mediapipe_manager.h  presets.h  profiles.h  segmecam_composite.cc  segmecam_composite.h  segmecam_face_effects.cc  segmecam_face_effects.h  segmecam_gui_gpu.cpp  ui_manager.h  vcam.cc  vcam.h
mediapipe/examples/desktop/segmecam/include/application/: application.h  application_cleanup.h  application_config.h  application_initialization.h  application_run.h  camera_setup.h  gpu_setup.h  manager_coordination.h  mediapipe_setup.h  portal_utils.h
mediapipe/examples/desktop/segmecam/include/camera/: camera_manager.h
mediapipe/examples/desktop/segmecam/include/effects/: effects_manager.h
mediapipe/examples/desktop/segmecam/include/mediapipe_manager/: mediapipe_manager.h
mediapipe/examples/desktop/segmecam/include/render/: render_manager.h
mediapipe/examples/desktop/segmecam/include/ui/: ui_manager_enhanced.h  ui_panels.h
mediapipe/examples/desktop/segmecam/src/application/: application.cpp  application_cleanup.cpp  application_config.cpp  application_initialization.cpp  application_run.cpp  camera_setup.cpp  gpu_setup.cpp  manager_coordination.cpp  mediapipe_setup.cpp  portal_utils.cpp
mediapipe/examples/desktop/segmecam/src/camera/: camera_manager.cpp
mediapipe/examples/desktop/segmecam/src/config/: BUILD  config_manager.cpp  config_manager.h
mediapipe/examples/desktop/segmecam/src/effects/: effects_manager.cpp
mediapipe/examples/desktop/segmecam/src/mediapipe_manager/: mediapipe_manager.cpp
mediapipe/examples/desktop/segmecam/src/render/: render_manager.cpp
mediapipe/examples/desktop/segmecam/src/ui/: background_panel.cpp  beauty_panel.cpp  camera_panel.cpp  profile_debug_panels.cpp  ui_manager_enhanced.cpp
mediapipe_graphs/: face_and_seg_gpu_mask_cpu.pbtxt  face_tasks_and_seg_gpu_mask_cpu.pbtxt  selfie_seg_cpu_min.pbtxt  selfie_seg_cpu_only.pbtxt  selfie_seg_gpu_mask_cpu.pbtxt
repo/: summary  summary.idx
repo/refs/heads/runtime/org.segmecam.SegmeCam.Debug/x86_64/: master
repo/summaries/: 2849a057e18ea31809b019ac9f04ba083b372de018fa90665a088b5e2b3947ad-9138f3bb288f12ff77cb29b8993661e7147534ca63978db8295ad481e1daff56.delta
scripts/: SegmeCam.sh  clean.sh  mediapipe_build_selfie_seg_gpu.sh  run_segmecam_gui_gpu.sh  setup_vcam.sh
src/: main.cpp
src/segmecam_gui_gpu/: BUILD  app_loop.h  app_state.cpp  app_state.h  args_parser.cpp  cam_enum.cc  cam_enum.h  camera_manager.cpp  camera_manager.h  presets.cc  segmecam_composite.cc  segmecam_composite.h  segmecam_face_effects.cc  segmecam_face_effects.h  segmecam_gui_gpu.cpp  segmecam_gui_gpu_old.cpp  ui_manager.cpp  ui_manager.h  vcam.h
tools/: bazel
